crates/pera-package-resolver/src/snapshots/pera_package_resolver__tests__value_nesting_boundary.snap
---
source: crates/pera-package-resolver/src/lib.rs
expression: "fmt(struct_layout, enum_layout)"
---
struct:
struct 0xa0::m::T1<u8, u8> {
    a: address,
    p: u8,
    q: vector<u8>,
}

enum:
enum 0xa0::m::E1<u8, u8> {
    V {
        a: address,
        p: u8,
        q: vector<u8>,
    },
}
